fix: make actual day visible in HCM by transparent border

--- a/packages/components/src/components/date-picker/date-picker.css
+++ b/packages/components/src/components/date-picker/date-picker.css
@@ -62,6 +62,9 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
   duet-date-picker .duet-date__header .duet-date__nav svg {
     color: var(--scl-color-white);
   }
+  duet-date-picker .duet-date__day[aria-pressed=true] {
+    border: 1px solid transparent;
+  }
 }
 
 .scale-date-picker {
